# agb-cerrado-chapada

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml
notebooks/: 01_area_masks.ipynb  02_gedi_download.ipynb  03_gedi_join_filter.ipynb
results/: filter_steps_2020.csv  filtering_stats_2020.csv  mapbiomas_composition_2020.csv  sensitivity_thresholds_2020.csv
scripts/: 01_define_aoi.js
src/agb_cerrado/: data.py  models.py  preprocessing.py  utils.py
tests/: test_setup.py
